<resources>
    <string name="app_name">ShoppingList</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add Item</string>
    <string name="action_sort">Sort</string>
    <string name="action_clear">Clear</string>

    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="item_desc">Item Description</string>
    <string name="item_icon">Item Icon</string>
</resources>
